[package]
name = "seven_seg"
version = "0.2.0"
edition = "2021"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/seven_seg"
homepage = "https://github.com/pic16f877ccs/seven_seg"
license = "GPL-3.0-or-later"
description = "Seven-segment digital display for terminal."
keywords = ["text", "combine-text", "format"]
categories = ["text-processing"]

[[examples]]
name = "cpu_freq"

[dependencies]
cattocol = "0.3.1"
num = "0.4.0"


[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
cpu-freq = "0.0.2"
txtframe = { version = "0.4.0", features = ["newline", "esc"] }
